update genealogical tree (62 people)

--- a/parent/templates/parent/index.html
+++ b/parent/templates/parent/index.html
@@ -38,48 +38,77 @@
 		var model = $(go.TreeModel);
 		model.nodeDataArray =
 		[
-		  { key: "00000001", parent: "000000001", name: "Албек" },
-		  { key: "0000001", parent: "00000001", name: "Гулмоут" },
-		  { key: "000001", parent: "0000001", name: "Гулмоут2" },
-		  { key: "00001", parent: "000001", name: "Бугуч" },
-		  { key: "0001", parent: "00001", name: "Чуопа" },
-		  { key: "001", parent: "0001", name: "К1езалг" },
-		  { key: "01", parent: "001", name: "Алхазур" },
-		  { key: "1",  parent: "01", name: "Мусост" },
-		  { key: "2", parent: "01", name: "Эстмар" },
-		  { key: "11", parent: "1",  name: "Инал" },
-		  { key: "111", parent: "11",  name: "Юсал" },
-		  { key: "1111", parent: "111",  name: "Ахмед" },
-		  { key: "11111", parent: "1111",  name: "Ризван" },
-		  { key: "1112", parent: "111",  name: "Ахдан" },
-		  { key: "1113", parent: "111",  name: "Хьамид" },
-		  { key: "112", parent: "11",  name: "Гилани" },
-		  { key: "1121", parent: "112",  name: "Эла" },
-		  { key: "1122", parent: "112",  name: "Хасан" },
-		  { key: "1123", parent: "112",  name: "Хусейн" },
-		  { key: "1124", parent: "112",  name: "Ахьмад" },
-		  { key: "12", parent: "1",  name: "Мурдал" },
-		  { key: "13", parent: "1",  name: "Бурсиг" },
-		  { key: "14", parent: "1",  name: "Тима" },
-		  { key: "141", parent: "14",  name: "Бауди" },
-		  { key: "142", parent: "14",  name: "Мохьмад" },
-		  { key: "15", parent: "12",  name: "Талт" },
-		  { key: "16", parent: "12", name: "Абдул-К" },
-		  { key: "151", parent: "15", name: "Тухан" },
-		  { key: "152", parent: "15", name: "Мохьмад" },
-		  { key: "121", parent: "12", name: "Алауди" },
-		  { key: "161", parent: "16", name: "Абаз" },
-		  { key: "1211", parent: "121", name: "Мохьмадгири" },
-		  { key: "12112", parent: "1211", name: "Макшерип" },
-		  { key: "12113", parent: "1211", name: "Мухтар" },
-		  { key: "12114", parent: "1211", name: "Аслан" },
-		  { key: "12115", parent: "1211", name: "Муслим" },
-		  { key: "12116", parent: "1211", name: "Асланбек" },
-		  { key: "12117", parent: "1211", name: "Муса" },
-		  { key: "12118", parent: "1211", name: "Мохьмад" },
+		  { key: "11",       			 name: "1. Таркхо" },
+		  { key: "21",   parent: "11",   name: "2. Шовхал" },
+		  { key: "31",   parent: "21",   name: "3. Акхмар" },
+		  { key: "41",   parent: "31",   name: "4. Албек" },
+		  { key: "51",   parent: "41",   name: "5. Гулмоут" },
+		  { key: "61",   parent: "51",   name: "6. Гулмоут2" },
+		  { key: "71",   parent: "61",   name: "7. Бугуч" },
+		  { key: "81",   parent: "71",   name: "8. Чуопа" },
+		  { key: "91",   parent: "81",   name: "9. К1езалг" },
+		  { key: "101",  parent: "91",   name: "10. Алхазур" },
+		  { key: "111",  parent: "101",  name: "11. Мусост" },
+		  { key: "112",  parent: "101",  name: "11. Эстмар" },
+		  { key: "121",  parent: "111",  name: "12. Инал" },
+		  { key: "123",  parent: "111",  name: "12. Тима" },
+		  { key: "122",  parent: "111",  name: "12. Бурсиг" },
+		  { key: "124",  parent: "111",  name: "12. Мурдал" },
+		  { key: "131",  parent: "121",  name: "13. Юсал" },
+		  { key: "132",  parent: "121",  name: "13. Гилани" },
+		  { key: "133",  parent: "123",  name: "13. Бауди" },
+		  { key: "134",  parent: "123",  name: "13. Мохьмад" },
+		  { key: "135",  parent: "124",  name: "13. Талт" },
+		  { key: "136",  parent: "124",  name: "13. Абдул-К" },
+		  { key: "137",  parent: "124",  name: "13. Алауди" },
+		  { key: "138",  parent: "121",  name: "13. Ахьмад-Хьаж" },
+		  { key: "141",  parent: "131",  name: "14. Ахмед" },
+		  { key: "142",  parent: "131",  name: "14. Ахдан" },
+		  { key: "143",  parent: "131",  name: "14. Хьамид" },
+		  { key: "144",  parent: "132",  name: "14. Эла" },
+		  { key: "145",  parent: "132",  name: "14. Хасан" },
+		  { key: "146",  parent: "132",  name: "14. Хусейн" },
+		  { key: "147",  parent: "132",  name: "14. Ахьмад" },
+		  { key: "148",  parent: "135",  name: "14. Тухан" },
+		  { key: "149",  parent: "135",  name: "14. Мохьмад" },
+		  { key: "1410", parent: "136",  name: "14. Абаз" },
+		  { key: "1411", parent: "137",  name: "14. Мохьмадгири" },
+		  { key: "1412", parent: "134",  name: "14. Хас-Магомед" },
+		  { key: "1413", parent: "138",  name: "14. Руслан" },
+		  { key: "151",  parent: "141",  name: "15. Ризван" },
+		  { key: "152",  parent: "1411", name: "15. Макшерип" },
+		  { key: "153",  parent: "1411", name: "15. Мухтар" },
+		  { key: "154",  parent: "1411", name: "15. Аслан" },
+		  { key: "155",  parent: "1411", name: "15. Муслим" },
+		  { key: "156",  parent: "1411", name: "15. Асланбек" },
+		  { key: "157",  parent: "1411", name: "15. Муса" },
+		  { key: "158",  parent: "1411", name: "15. Мохьмад" },
+		  { key: "159",  parent: "1412", name: "15. Руслан" },
+		  { key: "160",  parent: "1412", name: "15. Бислан" },
+		  { key: "160",  parent: "1412", name: "15. Адлан" },
+		  { key: "160",  parent: "1412", name: "15. Ислам" },
+		  { key: "161",  parent: "1413", name: "15. Саламу" },
+		  { key: "162",  parent: "143",  name: "15. Бислан" },
+		  { key: "163",  parent: "1410", name: "15. Арби" },
+		  { key: "164",  parent: "1410", name: "15. Абди" },
+		  { key: "165",  parent: "1410", name: "15. Адлан" },
+		  { key: "166",  parent: "1410", name: "15. Бекхан" },
+		  { key: "171",  parent: "164", name: "16. Рамзан" },
+		  { key: "172",  parent: "164", name: "16. Ризван" },
+		  { key: "173",  parent: "164", name: "16. Хьамзат" },
+		  { key: "174",  parent: "162", name: "16. Анзор" },
+		  { key: "175",  parent: "163", name: "16. Арсен" },
+		  { key: "176",  parent: "163", name: "16. Артур" },
+		  { key: "177",  parent: "163", name: "16. Анзор" },
 		];
 		myDiagram.model = model;
 	</script>
+
+    <ul>
+    {% for parent in latest_parent_list %}
+        <li><a href="/parent/{{ parent.id }}/">{{ parent.parent_name }}</a></li>
+    {% endfor %}
+    </ul>
 
 </body>
 </html>
